--- a/src/config/__styles.scss
+++ b/src/config/__styles.scss
@@ -45,3 +45,5 @@ $content_vertical:20px;
 //shadow
 $shadow: 0 1px 2px 0 #d8d8d8;
 $shadow_big: 0 19px 39px 0 rgb(0 0 0 / 20%);
+//
+$heavy_bold:700;
