--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -21,7 +21,7 @@
             margin-top: 10px;
         }
         .register_confirm_btn{
-            background-color: $base_color;
+            background-color: $red;
         }
         .register_confirm_btn:hover{
             background-color: $red;
