user login register logout done

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -17,7 +17,7 @@
             margin-top: 10px;
         }
         .login_confirm_btn{
-            background-color: $base_color;
+            background-color: $red;
         }
         .login_confirm_btn:hover{
             background-color: $red;
