--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,5 +1,22 @@
 @import './../../config/_styles.scss';
 
+.user_setting_container{
+    .MuiPaper-root {
+        .MuiList-root{
+            a{
+                text-decoration: none!important;
+                color:$red;
+                .MuiButtonBase-root {
+                    p{
+                        @extend .middle_font;
+                        font-weight: $heavy_bold;
+                        margin: 0 auto;
+                    }
+                }
+            }
+        }
+    }
+}
 
 .navigation_container{
     background-color: $red !important;
