--- a/src/config/__styles.scss
+++ b/src/config/__styles.scss
@@ -14,6 +14,7 @@ $yellow:#f8b62b;
 $pink:#e4007f;
 $grey:#D5DBDB;
 $base_color:#E3E6E6;
+$light_color:rgb(247, 248, 250);
 
 //font size
 .big_font{
