--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,5 +1,18 @@
 @import './../../config/_styles.scss';
 
+.cart_container{
+    margin:10px 28px 0 0;
+    &_badge{
+        .MuiBadge-badge {
+            font-weight: $heavy_bold;
+            background-color:$yellow;
+        }
+        .cart_container_cart{
+            path{
+            }
+        }
+    }
+}
 .user_setting_container{
     .MuiPaper-root {
         .MuiList-root{
