--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -4,6 +4,7 @@
     width: 100%;
     height: 100%;
     padding: 7px;
+    box-sizing: border-box;
     
     img{
         border-radius: $border-radius_card;
@@ -12,8 +13,9 @@
     }
     .product_name{
         @extend .small_font;
+        @extend .text_overflow;
         margin: 10px 5px 5px;
-        height: 20px;
+        height: 35px;
         font-weight: 700;
         
     
