--- a/src/config/__styles.scss
+++ b/src/config/__styles.scss
@@ -15,6 +15,8 @@ $pink:#e4007f;
 $grey:#D5DBDB;
 $base_color:#E3E6E6;
 $light_color:rgb(247, 248, 250);
+$red_shadow:#a55145;
+$dark_grey:rgba(0, 0, 0, 0.6);
 
 //font size
 .big_font{
@@ -48,3 +50,33 @@ $shadow: 0 1px 2px 0 #d8d8d8;
 $shadow_big: 0 19px 39px 0 rgb(0 0 0 / 20%);
 //font weight
 $heavy_bold:700;
+
+
+//text overflow
+.text_overflow{
+    white-space:pre-wrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+}
+
+
+//reset
+table,thead,tbody,tfoot,tr,th,td {
+    display: block;
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    border: none;
+    border-collapse: inherit;
+    border-spacing: 0;
+    border-color: inherit;
+    vertical-align: inherit;
+    text-align: left;
+    font-weight: inherit;
+    -webkit-border-horizontal-spacing: 0;
+    -webkit-border-vertical-spacing: 0;
+}
+th, td {
+    display: inline;
+}
