--- a/src/pages/Logout/Logout.scss
+++ b/src/pages/Logout/Logout.scss
@@ -7,6 +7,7 @@
     width: 50%;
     margin-left: 25%;
     border-radius: $border-radius_container;
+    margin-bottom: 100px;
     .logout_title{
         margin-top: 50px;
         @extend .big_font;
