shopping cart done

--- a/src/pages/Merchant/MerchantLayout/MerchantLayout.scss
+++ b/src/pages/Merchant/MerchantLayout/MerchantLayout.scss
@@ -1,6 +1,6 @@
 @import '../../../config/_styles.scss';
 
-.user_layout_container{
+.merchant_layout_container{
     background-color:$light_color;
     &_content{
         // border: 1px solid red;
