--- a/src/pages/Users/UserLayout/UserLayout.scss
+++ b/src/pages/Users/UserLayout/UserLayout.scss
@@ -36,7 +36,7 @@
         }
         &_right{
             border:1px solid red;
-            background-color: white;
+            // background-color: white;
             width:100%;
 
         }
