--- a/src/pages/Merchant/MerchantProducts/MerchantProducts.scss
+++ b/src/pages/Merchant/MerchantProducts/MerchantProducts.scss
@@ -114,7 +114,7 @@
             padding: 10px 20px;
         }
         .add_confirm_btn:hover{
-            background-color: $red;
+            background-color: $red_shadow;
         }
     }
 }
