--- a/src/pages/Merchant/MerchantTransaction/MerchantTransaction.scss
+++ b/src/pages/Merchant/MerchantTransaction/MerchantTransaction.scss
@@ -38,6 +38,9 @@
                           text-align: center;
                         }
                     }
+                    .merchant_tran_container_center{
+                        text-align: center;
+                    }
                     .merchant_tran_container_img{
                         width:100px;
                         height: 100px;
