--- a/src/config/__styles.scss
+++ b/src/config/__styles.scss
@@ -48,6 +48,7 @@ $content_vertical:20px;
 //shadow
 $shadow: 0 1px 2px 0 #d8d8d8;
 $shadow_big: 0 19px 39px 0 rgb(0 0 0 / 20%);
+$shadow_middle:0 1px 20px 0 rgba(0, 0, 0, 0.2);
 //font weight
 $heavy_bold:700;
 
