--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,5 +1,8 @@
 @import './../../config/_styles.scss';
-
+a{
+    text-decoration: none;
+    color:black;
+}
 .product_card_container{
     width: 100%;
     height: 100%;
