--- a/src/pages/Users/UserLayout/UserLayout.scss
+++ b/src/pages/Users/UserLayout/UserLayout.scss
@@ -40,3 +40,23 @@
         }
     }
 }
+
+.inactive_child_child_menu_tbn{
+    background-color: white;
+    color:black;
+    font-weight: 400;
+    div{
+        padding: 10px 0 10px 40px; 
+
+    }
+}
+
+.active_child_child_menu_tbn{
+    background-color: $red;
+    color:white;
+
+    div{
+        padding: 10px 0 10px 40px; 
+
+    }
+}
