--- a/src/pages/Users/UserOrders/UserPaid/UserPaid.scss
+++ b/src/pages/Users/UserOrders/UserPaid/UserPaid.scss
@@ -47,6 +47,7 @@
         align-items: center;
         padding: 16px 16px;
         border: 1px solid $base_color;
+        background-color: white;
         &_first_block{
             display: flex;
         }
