login register form val done

--- a/src/components/LogoHeader/LogoHeader.scss
+++ b/src/components/LogoHeader/LogoHeader.scss
@@ -1,7 +1,7 @@
 @import './../../config/_styles.scss';
 
 .logo-container {
-    width:$logo_width;
+    width:50px;
     margin:20px auto;
 
     img{
