--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,7 +4,14 @@
     // padding:100px $layout_horizontal 0 $layout_horizontal;
     .first_container{
         background-color: $base_color;
-        padding: 100px $layout_horizontal 100px $layout_horizontal;
+        padding: 50px $layout_horizontal 100px $layout_horizontal;
+        .main_title{
+            @extend .big_font;
+            color:$red;
+            font-weight: 700;
+            margin:0 0 30px 0;
+            text-align: center;
+        }
         .main_container{
             background-color: white;
             border-radius:$border-radius_container;
@@ -91,15 +98,10 @@
         border:none;
     }
 }
-.main_title{
-    @extend .big_font;
-    color:$red;
-    font-weight: 700;
-    margin:0 0 10px 0;
-}
+
 .sec_container{
     // margin-top: 100px;
-    padding:20px 0 50px 0;
+    padding:100px 0 50px 0;
     background-color: $base_color;
 
     .sec_title{
