--- a/src/pages/ProductDetail/ProductDetail.scss
+++ b/src/pages/ProductDetail/ProductDetail.scss
@@ -37,7 +37,7 @@
         font-weight: 700;
         margin:0 0 10px 0;
     }
-    .category_container{
+    .category_name_container{
         &_link{
             text-decoration: none;
             @extend .big_font;
