--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,8 +6,6 @@
     &_top{
         display: flex;
         justify-content: space-evenly;
-
-    
     }
 
     .footer_content_container{
@@ -24,7 +22,7 @@
             @extend .middle_font;
             color: $red;
             font-weight:$heavy_bold;
-            max-width: 50%;
+            max-width: 70%;
         }
         ul{
             padding-left: 0px;
@@ -56,11 +54,39 @@
                 }
             }
          }
-        &_content_title{            
+        &_content_title{
                 @extend .middle_font;
                 color: $red;
                 font-weight:$heavy_bold;
         }
     }
 
+}
+
+@media only screen and (max-width: 767px) {
+    .footer_container_top{
+        flex-direction: column;
+    }
+
+    .footer_content_container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+
+    .footer_content_container:first-child{
+        margin-bottom: 70px;
+    }
+}
+
+@media only screen and (max-width: 414px) {
+
+    .footer_container{
+        padding:50px 0 20px 0;
+    }
+    .footer_content_container_text{
+        max-width: 100%!important;
+    }
 }
