--- a/src/pages/Users/UserLayout/UserLayout.scss
+++ b/src/pages/Users/UserLayout/UserLayout.scss
@@ -6,16 +6,29 @@
         padding:$content_horizontal;
         display: flex;
         &_left{
-            width: 15%;
+            width: 20%;
             margin-right:50px;
             border-radius: $border-radius_container;
             &_menu{
+                .inactive_menu_tbn{
+                    .left_menu_item_container{
+                        .MuiButtonBase-root {
+                            .MuiListItemIcon-root {
+                                margin-right: 15px;
+                            }
+                        }
+                    }
+                    
+                }
                 .active_menu_tbn{
                     background: $red;
                     color:white;
                     font-weight: $heavy_bold;
                     .left_menu_item_container{
                         .MuiButtonBase-root {
+                            .MuiListItemIcon-root {
+                                margin-right: 15px;
+                            }
                             .left_menu_item_icon{
                                 color:white;
                             }
@@ -42,7 +55,6 @@
             }
         }
         &_right{
-            // background-color: white;
             width:100%;
 
         }
@@ -54,11 +66,32 @@
     color:black;
     font-weight: 400;
     div{
-        padding: 10px 0 10px 40px; 
+        padding: 10px 0 10px 60px; 
 
     }
 }
-
+.active_menu_tbn{
+    background: $red;
+    color:white;
+    font-weight: $heavy_bold;
+    .MuiButtonBase-root {
+        .MuiListItemIcon-root{
+            svg{
+                path{
+                    fill:white;
+                }
+            }
+        }
+    }
+    .left_menu_item_container{
+        .MuiButtonBase-root {
+            .left_menu_item_icon{
+                color:white;
+            }
+        }
+    }
+    
+}
 .active_child_child_menu_tbn{
     background-color: $red;
     color:white;
@@ -67,4 +100,37 @@
         padding: 10px 0 10px 40px; 
 
     }
+}
+
+@media only screen and (max-width: 1023px) {
+    .user_layout_container_content_left{
+        position: relative;
+        margin-right: 0;
+    }
+    .mobile_menu_container{
+        box-shadow: $shadow_big;
+        margin-left: -30px;
+        // margin-top: -30px;
+        top: 0;
+        left: 0;
+        position: absolute;
+        bottom: 0;
+        .MuiPaper-root {
+            border-top-right-radius: $border-radius_card;
+            border-bottom-right-radius: $border-radius_card;
+            position: relative;
+            // margin-top: 130.35px;
+        }
+    }
+    .user_layout_container_content{
+        padding: 30px;
+        // flex-direction: column;
+
+    }
+
+    .inactive_child_child_menu_tbn div {
+        padding: 15px 0 15px 70px!important;
+    }
+    
+    
 }
