--- a/src/components/Copyright/Copyright.scss
+++ b/src/components/Copyright/Copyright.scss
@@ -1,3 +1,7 @@
+@media only screen and (min-width: 1200px) {
+}
+@media only screen and (max-width: 1024px) {
+}
 @media only screen and (min-width: 1024px) {
 }
 @media only screen and (max-width: 1023px) {
