--- a/src/pages/Users/UserDashboard/UserDashboard.scss
+++ b/src/pages/Users/UserDashboard/UserDashboard.scss
@@ -52,3 +52,36 @@
     }
   
 }
+
+@media only screen and (max-width: 1200px) {
+    .user_dashboard_container_top{
+        flex-direction: column;
+    }
+
+    .user_dashboard_container_block{
+        margin: 0 40px 40px;
+    }
+}
+
+@media only screen and (max-width: 414px) {
+    .user_layout_container_content_right {
+        width: 80%;
+    }
+    .user_dashboard_container_block {
+        margin: 0 0 40px;
+        padding: 0 20px 10px;
+        overflow: hidden;
+    }
+
+    .user_dashboard_container_title{
+        margin: 20px 0;
+    }
+    .user_dashboard_container_order_content {
+        flex-wrap: wrap;
+        .user_dashboard_container_order_item {
+            width: 35%;
+            margin-right: 5%;
+            margin-top: 5%;
+        }
+    }
+}
